# SimpleKivy

./: LICENSE  README.md  pyproject.toml
examples/: ex1.py  hello_world.py  mdswiper.py  screens_dict.py  test.py
simplekivy/: __init__.py  app.py  main.kv  simplekivy.py
simplekivy/widgets/: __init__.py  app.py  app_methods.py  main.kv  mdapp.py
