[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "simplekivy"
version = "0.0.6"
authors = [
  { name="yousuf", email="yosefmahmoud356@gmail.com" },
]
description = "the idea is inspired by PySimpleGui , to quickly create simple kivy apps "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yousuf60/SimpleKivy"
"Bug Tracker" = "https://github.com/yousuf60/SimpleKivy/issues"



[tool.setuptools.package-data]
"simplekivy.widgets" = ["*.kv"]
